--- a/client/pages/mine/mine.wxml
+++ b/client/pages/mine/mine.wxml
@@ -1,11 +1,8 @@
 <!--pages/mine/mine.wxml-->
 <view class="container">
   <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+    <image class="userinfo-avatar" src="{{logged ? userInfo.avatarUrl : '/assets/images/user-unlogin.png'}}" background-size="cover"></image>
+    <text class="userinfo-nickname" wx:if="{{logged}}">{{userInfo.nickName}}</text>
   </view>
 
   <view class="nav-list">
@@ -14,33 +11,51 @@
         <icon class="icon-orders"></icon>
         <text>我的订单</text>
       </view>
-      <view class="nav-more"><icon class="icon-right" color="gray"></icon></view>
+      <view class="nav-more">
+        <icon class="icon-right" color="gray"></icon>
+      </view>
     </view>
+    <navigator class="nav-item" url="/pages/select-address/select-address">
+      <view class="nav-title">
+        <icon class="icon-cate"></icon>
+        <text>收货地址</text>
+      </view>
+      <view class="nav-more">
+        <icon class="icon-right" color="gray"></icon>
+      </view>
+    </navigator>
     <navigator class="nav-item" url="/pages/map/map">
-        <view class="nav-title">
+      <view class="nav-title">
         <icon class="icon-location"></icon>
-          <text>店铺地址</text>
-        </view>
-        <view class="nav-more"><icon class="icon-right" color="gray"></icon></view>
+        <text>店铺地址</text>
+      </view>
+      <view class="nav-more">
+        <icon class="icon-right" color="gray"></icon>
+      </view>
     </navigator>
     <view class="nav-item" bindtap="callService">
       <view class="nav-title">
         <icon class="icon-service"></icon>
         <text>联系客服</text>
       </view>
-      <view class="nav-more"><icon class="icon-right" color="gray"></icon></view>
+      <view class="nav-more">
+        <icon class="icon-right" color="gray"></icon>
+      </view>
     </view>
     <view class="nav-item" bindtap="showAbout">
       <view class="nav-title">
         <icon class="icon-shop"></icon>
         <text>关于我们</text>
       </view>
-      <view class="nav-more"><icon class="icon-right" color="gray"></icon></view>
+      <view class="nav-more">
+        <icon class="icon-right" color="gray"></icon>
+      </view>
     </view>
   </view>
 
-  <view class="logout">
-    <button type="warn" bindtap="quit" > 退出登录</button>
+  <view class="log-btn">
+    <button type="primary" wx:if="{{!logged}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo">点击登录</button>
+    <!-- <button type="warn" bindtap="quit" wx:else> 退出登录</button> -->
   </view>
 
   <view class="footer">
