--- a/client/pages/mine/mine.wxss
+++ b/client/pages/mine/mine.wxss
@@ -42,10 +42,10 @@
   margin-left: 32rpx;
 }
 
-.logout {
+.log-btn {
   margin-top: 50rpx;
 }
 
-.logout button {
+.log-btn button {
   width: 600rpx;
 }
